--- a/src/LicenseAPI/Views/_ViewImports.cshtml
+++ b/src/LicenseAPI/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using license_api
-@using license_api.Models
+﻿@using LicenseAPI
+@using LicenseAPI.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
